se cambia titulo y icono de la web, se prepara archivo para variables css globales y se eliminan algunos archivos innecesarios

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Portfolio</title>
+    <title>Space Tourist</title>
   </head>
   <body class="min-h-full">
     <div id="root"></div>
