--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link href="https://fonts.cdnfonts.com/css/bellefair" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/barlow" rel="stylesheet" />
+    <link
+      href="https://fonts.cdnfonts.com/css/barlow-condensed"
+      rel="stylesheet"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
